; ModuleID = '/home/carl/AnghaBench/proxychains-ng/src/extr_core.c_proxy_gethostbyname.c'
source_filename = "/home/carl/AnghaBench/proxychains-ng/src/extr_core.c_proxy_gethostbyname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i64 }
%struct.TYPE_16__ = type { %struct.TYPE_13__ }
%struct.TYPE_13__ = type { %struct.TYPE_12__ }
%struct.TYPE_12__ = type { i64 }
%struct.hostent = type { i8**, i8**, i32, i32 }
%struct.gethostbyname_data = type { i8**, i64, %struct.hostent }
%struct.TYPE_14__ = type { i64 }
%struct.TYPE_17__ = type { i64 }

@AF_INET = common dso_local global i32 0, align 4
@ip_type_localhost = common dso_local global %struct.TYPE_15__ zeroinitializer, align 8
@ip_type_invalid = common dso_local global %struct.TYPE_16__ zeroinitializer, align 8
@.str = private unnamed_addr constant [22 x i8] c"return hostent space\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.hostent* @proxy_gethostbyname(i8* %0, %struct.gethostbyname_data* %1) #0 {
  %3 = alloca %struct.hostent*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.gethostbyname_data*, align 8
  %6 = alloca [256 x i8], align 16
  %7 = alloca %struct.TYPE_14__, align 8
  %8 = alloca %struct.TYPE_17__, align 8
  store i8* %0, i8** %4, align 8
  store %struct.gethostbyname_data* %1, %struct.gethostbyname_data** %5, align 8
  %9 = call i32 (...) @PFUNC()
  %10 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %11 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %10, i32 0, i32 1
  %12 = bitcast i64* %11 to i8*
  %13 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %14 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %13, i32 0, i32 0
  %15 = load i8**, i8*** %14, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 0
  store i8* %12, i8** %16, align 8
  %17 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %18 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %17, i32 0, i32 0
  %19 = load i8**, i8*** %18, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i64 1
  store i8* null, i8** %20, align 8
  %21 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %22 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %21, i32 0, i32 0
  %23 = load i8**, i8*** %22, align 8
  %24 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %25 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %24, i32 0, i32 2
  %26 = getelementptr inbounds %struct.hostent, %struct.hostent* %25, i32 0, i32 0
  store i8** %23, i8*** %26, align 8
  %27 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %28 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %27, i32 0, i32 0
  %29 = load i8**, i8*** %28, align 8
  %30 = getelementptr inbounds i8*, i8** %29, i64 1
  %31 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %32 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %31, i32 0, i32 2
  %33 = getelementptr inbounds %struct.hostent, %struct.hostent* %32, i32 0, i32 1
  store i8** %30, i8*** %33, align 8
  %34 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %35 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %34, i32 0, i32 1
  store i64 0, i64* %35, align 8
  %36 = load i32, i32* @AF_INET, align 4
  %37 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %38 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %37, i32 0, i32 2
  %39 = getelementptr inbounds %struct.hostent, %struct.hostent* %38, i32 0, i32 3
  store i32 %36, i32* %39, align 4
  %40 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %41 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %40, i32 0, i32 2
  %42 = getelementptr inbounds %struct.hostent, %struct.hostent* %41, i32 0, i32 2
  store i32 8, i32* %42, align 8
  %43 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %44 = call i32 @gethostname(i8* %43, i32 256)
  %45 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %46 = load i8*, i8** %4, align 8
  %47 = call i32 @strcmp(i8* %45, i8* %46)
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %63, label %49

49:                                               ; preds = %2
  %50 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %51 = call i64 @inet_addr(i8* %50)
  %52 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %53 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %52, i32 0, i32 1
  store i64 %51, i64* %53, align 8
  %54 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %55 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %54, i32 0, i32 1
  %56 = load i64, i64* %55, align 8
  %57 = icmp eq i64 %56, -1
  br i1 %57, label %58, label %62

58:                                               ; preds = %49
  %59 = load i64, i64* getelementptr inbounds (%struct.TYPE_15__, %struct.TYPE_15__* @ip_type_localhost, i32 0, i32 0, i32 0, i32 0), align 8
  %60 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %61 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %60, i32 0, i32 1
  store i64 %59, i64* %61, align 8
  br label %62

62:                                               ; preds = %58, %49
  br label %93

63:                                               ; preds = %2
  %64 = load i8*, i8** %4, align 8
  %65 = call i64 @hostsreader_get_numeric_ip_for_name(i8* %64)
  %66 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %7, i32 0, i32 0
  store i64 %65, i64* %66, align 8
  %67 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %7, i32 0, i32 0
  %68 = load i64, i64* %67, align 8
  %69 = load i64, i64* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @ip_type_invalid, i32 0, i32 0, i32 0, i32 0), align 8
  %70 = icmp ne i64 %68, %69
  br i1 %70, label %71, label %76

71:                                               ; preds = %63
  %72 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %7, i32 0, i32 0
  %73 = load i64, i64* %72, align 8
  %74 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %75 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %74, i32 0, i32 1
  store i64 %73, i64* %75, align 8
  br label %93

76:                                               ; preds = %63
  %77 = load i8*, i8** %4, align 8
  %78 = load i8*, i8** %4, align 8
  %79 = call i32 @strlen(i8* %78)
  %80 = call i64 @at_get_ip_for_host(i8* %77, i32 %79)
  %81 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %8, i32 0, i32 0
  store i64 %80, i64* %81, align 8
  %82 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %8, i32 0, i32 0
  %83 = load i64, i64* %82, align 8
  %84 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %85 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %84, i32 0, i32 1
  store i64 %83, i64* %85, align 8
  %86 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %87 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %86, i32 0, i32 1
  %88 = load i64, i64* %87, align 8
  %89 = load i64, i64* getelementptr inbounds (%struct.TYPE_16__, %struct.TYPE_16__* @ip_type_invalid, i32 0, i32 0, i32 0, i32 0), align 8
  %90 = icmp eq i64 %88, %89
  br i1 %90, label %91, label %92

91:                                               ; preds = %76
  store %struct.hostent* null, %struct.hostent** %3, align 8
  br label %100

92:                                               ; preds = %76
  br label %93

93:                                               ; preds = %92, %71, %62
  %94 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %95 = load i8*, i8** %4, align 8
  %96 = call i32 @gethostbyname_data_setstring(%struct.gethostbyname_data* %94, i8* %95)
  %97 = call i32 @PDEBUG(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %98 = load %struct.gethostbyname_data*, %struct.gethostbyname_data** %5, align 8
  %99 = getelementptr inbounds %struct.gethostbyname_data, %struct.gethostbyname_data* %98, i32 0, i32 2
  store %struct.hostent* %99, %struct.hostent** %3, align 8
  br label %100

100:                                              ; preds = %93, %91
  %101 = load %struct.hostent*, %struct.hostent** %3, align 8
  ret %struct.hostent* %101
}

declare dso_local i32 @PFUNC(...) #1

declare dso_local i32 @gethostname(i8*, i32) #1

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i64 @inet_addr(i8*) #1

declare dso_local i64 @hostsreader_get_numeric_ip_for_name(i8*) #1

declare dso_local i64 @at_get_ip_for_host(i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @gethostbyname_data_setstring(%struct.gethostbyname_data*, i8*) #1

declare dso_local i32 @PDEBUG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
